--- a/JsonProcessor.csproj
+++ b/JsonProcessor.csproj
@@ -8,8 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="30.1.0" />
+    <PackageReference Include="IronXL.Excel" Version="2024.2.25" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Export\" />
   </ItemGroup>
 
 </Project>
